--- a/Release/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Release/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -38,7 +38,7 @@ ul li h4 {
 	background-color: #376dad;
 }
 #blq-main #header #banner {
-  	padding-left: 13px;
+  	padding-left: 14px;
   	color: #fff;
 }
 #blq-main #header #banner h1 {
@@ -129,16 +129,23 @@ ul.navigation li a {
 	color: #fff;
 }
 #blq-local-nav ul.topics li {
-	padding-left: 5px;	
-	line-height: 1.2em;
+	/*padding-left: 5px;*/	
+	line-height: 1.4em;
+}
+#blq-local-nav ul.topics li a {
+	display: block;
+	padding-left: 15px;
 }
 body.ie6 #blq-local-nav ul.topics li {
 	line-height: 0.8em;
 }
 #blq-local-nav ul.topics li.topic-parent {
 	padding-left: 0;
-	line-height: 1.8em;
+	line-height: 1.9em;
 	margin-bottom: 5px;
+}
+#blq-local-nav ul.topics li.topic-parent a {
+	padding-left: 10px;
 }
 #blq-local-nav ul.topics li a:hover {
 	/*font-weight: bold;*/	
@@ -192,7 +199,7 @@ ul.admin {
 	/*width: 100%; how to make this relative size? */
 	width: 463px;
 }
-#blq-main .inspect-user,#blq-main .threads, #blq-main .addthread, #blq-main .error, #blq-main .multiposts, #blq-main .moreposts, #blq-main .morecomments, #blq-main .move-thread  {
+#blq-main .threads, #blq-main .addthread, #blq-main .error, #blq-main .notfound, #blq-main .multiposts, #blq-main .moreposts, #blq-main .morecomments, #blq-main .move-thread  {
 	width: 463px;
 	margin-right: 14px;
 	padding-bottom: 10px;
@@ -241,7 +248,7 @@ ul.admin {
 }
 /* pagination */
 #blq-main #blq-content .pagination { 
-  	margin: 10px; 
+  	margin: 5px 9px 10px 9px; 
   	float:right;
   	width: auto;
   	clear: both;
@@ -250,6 +257,7 @@ ul.admin {
   	float:left;
   	width: auto;
   	margin-right: 1px;
+  	font-family: verdana,arial,helvetica,sans serif;
 }
 
 body.ie6 #blq-main #blq-content .pagination li {
@@ -260,16 +268,16 @@ body.ie6 #blq-main #blq-content .pagination li {
 	height: 10px;
 	font-size:0.9em; 
 	margin:0 1px 0 0; 
-	padding: 3px 7px 7px 7px;
+	padding: 3px 5px 7px 5px;
 }
 #blq-main #blq-content .pagination li a:hover {
 	text-decoration: underline;	
 }
 #blq-main #blq-content .pagination li.previous {
-	margin-right: 7px; 	
+	margin-right: 5px; 	
 }
 #blq-main #blq-content .pagination li.next {
-	margin-left: 7px; 	
+	margin-left: 5px; 	
 }
 #blq-main #blq-content .pagination li.dna-button {
 	height: 20px;
@@ -278,7 +286,7 @@ body.ie6 #blq-main #blq-content .pagination li {
 #blq-main #blq-content .pagination li.dna-button a {
 	height: 11px;
 	margin-left: 3px;
-	padding: 3px 7px 6px 5px;
+	padding: 3px 5px 6px 2px;
 	background: url(/dnaimages/dna_messageboard/img/button_right_bg.png) top right no-repeat;	
 	text-decoration: none;
 	color: #fff;
@@ -309,15 +317,13 @@ body.ie6 #blq-main #blq-content .pagination li {
 /* topiclist, forumthreads, post-list */
 #blq-content.frontpage  { 
 	background:none; 
-	/*float:left; 
-	width: 479px;*/
+
 	margin-left:14px;
 	padding:0;
 }
 #blq-content .topiclist br {display:none;}
 
 #blq-content .topiclist {
-	overflow:auto;
 	padding: 0;
 }
 #blq-content h3 {
@@ -336,9 +342,6 @@ body.ie6 #blq-main #blq-content .pagination li {
 	text-decoration: underline;	
 }
 #blq-content .topiclist li {
-	/*float: left;
-	width: 223px;
-	position: relative;*/
 	margin-bottom: 14px;
 	margin-right: 14px;
 	padding-bottom:10px;
@@ -346,9 +349,9 @@ body.ie6 #blq-main #blq-content .pagination li {
 	background-color: #FFFFFF;
 	min-height: 160px;
 }
-/*#blq-content .single-col-topics li {
-	width: 463px;
-}*/
+#blq-content .topiclistimage li {
+	min-height: 245px;
+}
 #blq-content .topiclist li p {
 	font-size: 1.1em; 
 	margin-top: 5px;
@@ -358,12 +361,8 @@ body.ie6 #blq-main #blq-content .pagination li {
 #blq-content .topiclist li a:hover {
 	text-decoration: none;
 }
-#blq-main #blq-content .topiclist li div.topicimage {
-  	/*margin: 10px 10px 0;*/
-}
 #blq-content .topiclist li div.topicimage img {
   	border: 0;
-  	
 }
 #blq-main .multiposts h3 {
 	padding-left: 10px;
@@ -379,6 +378,7 @@ ul.forumthreadposts {
 ul.forumthreadposts li {
   	padding: 10px;
 }
+
 ul.forumthreadposts li p {
 	margin-bottom: 10px;
 }
@@ -412,6 +412,88 @@ ul.forumthreadposts li.stripe {
 	font-size: 1em;
 	padding:0
 }
+#blq-content table.forumthreads {
+	width: 463px;
+	margin-bottom: 10px;
+	font-size: 	1.1em;
+}
+#blq-content table.forumthreads a {
+	text-decoration: none;	
+}
+#blq-content table.forumthreads a:hover {
+	text-decoration: underline;	
+}
+#blq-content table.forumthreads tr.stickypin {
+	border: 1px solid #a5a5a5;
+}
+#blq-content table.forumthreads tr.stickypin h3 {
+	padding: 2px 0 3px 25px;
+	background: url(/dnaimages/dna_messageboard/img/bg_pin.png) top left no-repeat;
+}
+#blq-content table.forumthreads th {
+	padding: 5px;
+	border-right: 1px solid #fff;
+	background-color: #71aef1;
+	text-align: left;
+	font-weight: normal;
+	color: #fff;
+}
+#blq-content table.forumthreads th#discussion {
+	width: 50%;	
+	padding-left: 9px;
+}
+#blq-content table.forumthreads th#replies{
+	width: 10%;
+	text-align: center;
+}
+#blq-content table.forumthreads th#startedby {
+	width: 20%;
+	text-align: center;
+}
+#blq-content table.forumthreads th#latestreply {
+	width: 20%;
+	border-right: none;	
+	text-align: center;
+}
+#blq-content table.forumthreads td {
+	padding:10px 5px 10px 5px;
+	border-right: 1px solid #fff;
+	vertical-align: top;
+}
+#blq-content table.forumthreads .moderation td {
+	padding: 0;
+	border-right: none;
+}
+#blq-content table.forumthreads .moderation td a {
+	text-decoration: underline;
+} 
+#blq-content table.forumthreads .stickypin td {
+	background-color: #d4e2e6;
+} 
+#blq-content table.forumthreads td.discussiondetail {
+	padding-left: 9px;
+	word-break: break-all;
+}
+#blq-content table.forumthreads td.replies {
+	text-align: center;
+}
+#blq-content table.forumthreads td.startedby {
+	text-align: center;
+	word-break: break-all;
+}
+#blq-content table.forumthreads td.latestreply {
+	text-align: center;
+	border-right: none;
+}
+#blq-content table.forumthreads td h3 {
+	margin: 0;
+}
+#blq-content table.forumthreads .stripe td {
+	background-color: #e2e7e9;
+}
+#blq-content table.forumthreads .stickypin td {
+	background-color: #d4e2e6;
+} 
 #blq-content .post-list h4 {
 	margin-left: 10px;
 	margin-right: 10px;
@@ -437,16 +519,6 @@ ul.forumthreads li p {
 	padding-left: 10px; 
 	font-size: 0.8em;
 }
-ul.forumthreads div.stickypin {
-	float: left;
-	width: 20px;
-	height: 20px;
-	margin-right: 5px;
-	background: url(/dnaimages/dna_messageboard/img/bg_pin.png) top left no-repeat;
-}
-ul.forumthreads div.stickypin span {
-	display: none;	
-}
 #blq-main #blq-content ul.forumthreads p a:hover, #blq-main #blq-content ul.post-list p a:hover {
 	text-decoration: none;
 }
@@ -466,7 +538,7 @@ ul.forumthreads li.stripe, ul.post-list li.stripe {
 ul.forumthreads li span.userid {
 	display:none;
 }
-#blq-content.moreposts p, #blq-content.morecomments p {
+#blq-content.moreposts p, #blq-content.morecomments p, #blq-content.notfound p {
   	margin-left: 10px;
   	margin-right: 10px;
   	margin-bottom: 5px;
@@ -551,6 +623,9 @@ ul.forumthreadposts li blockquote, div.inreplyto blockquote {
 a.editor, a.notable { 
   	font-style: italic;
 }
+p#countdown {
+	margin-left: 10px;	
+}
 /*#blq-content .dna-boards p.dna-error {
   	padding-left:214px; 
   	width:375px; 
@@ -566,16 +641,19 @@ a.editor, a.notable {
 #blq-content .dna-moderation-wrap {
 	background: url(/dnaimages/dna_messageboard/img/dna-mod-bottom-arrow.png) top right no-repeat;
 }
+#blq-content .dna-moderation-wrap a {
+	text-decoration: underline;
+}
 #blq-content .dna-moderation-wrap p.dna-boards-moderation {
 	padding-left: 10px;	
 }
 #blq-content .dna-moderation-wrapup {
-	margin-bottom: 10px;
+	/*margin-bottom: 10px;*/
 	padding-top: 6px;
 	background: url(/dnaimages/dna_messageboard/img/dna-mod-top-arrow.png) top right no-repeat;
 }
 #blq-content .forumthreads .dna-moderation-wrapup {
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 	font-size: 0.9em;
 }
 #blq-content .dna-boards-moderation {
@@ -635,7 +713,7 @@ div#dna-boardpromo #dna-about-board .id-wrap a.id-signin, #blq-main #blq-content
 	width: 75px;
 	height: 22px;
 	margin-top: 9px;
-	margin-left: 10px;
+	margin-left: 9px;
 	padding: 3px 5px 0px 45px;
 	background:url(/dnaimages/dna_messageboard/img/id-signin.gif) no-repeat top left; 	
 	color: #000;
@@ -659,11 +737,14 @@ div#dna-boardpromo #dna-about-board .id-wrap, #blq-content .id-wrap  {
 	padding: 0;
 	margin: 0;
 }
+#blq-content .id-wrap  {
+	margin-bottom: 10px;	
+}
 div#dna-boardpromo #dna-about-board .id-wrap p, #blq-content .id-wrap p {
 	line-height: 2.1em;
 }
 #blq-main #dna-boardpromo hr {
-	margin: 10px 10px 0 10px;
+	margin: 10px 8px 0 8px;
 	line-height: 1px;
 	border: none;
 	border-top: 1px solid #ccc;
@@ -751,8 +832,8 @@ p.flag {
 p.flag a {
   color:#999; 
   background-color: transparent;
-  background:url(/dnaimages/dna_messageboard/img/complainicon.gif) no-repeat top left; 
-  padding-left:20px;
+  background:url(/dnaimages/dna_messageboard/img/warning-triangle-5.gif) no-repeat top left; 
+  padding: 2px 0 2px 20px;
 }
 
 .dna-boards .collections {margin-left:216px;}
@@ -771,15 +852,10 @@ p.flag a {
   font-weight:bold;
 }
 
-.dna-boards fieldset {
-   border:1px solid #ccc
-}
-
 .dna-boards legend {
-  margin-left:10px;
-  padding:1em 10px;
+  padding:1em 0 1em 0;
   font-size:1.2em;
-  color:#444;
+  color:#444
 }
 .dna-boards .text,
 .dna-boards select,
@@ -822,9 +898,8 @@ p.flag a {
   padding: 0 10px;
 }
 .dna-boards .submit, .dna-boards .cancel {
-  margin:10px; 
+  margin:0 0 10px 10px; 
   padding:4px;
-  float:right;
 }
 
 .dna-boards-membername {display:none}
@@ -873,7 +948,7 @@ div#logintrouble {
 	color: #000;
 }
 .servertoobusy p {
-  margin: 10px 0 10px 0;
+  margin: 10px;
 }
 .servertoobusy ul {
   margin-top: 20px;
@@ -881,7 +956,7 @@ div#logintrouble {
 }
 .servertoobusy li.sitelink {
   float: left;
-  margin-right: 10px;
+  margin-right: 20px;
   /*width: 15%;*/
 }
 #blq-content .servertoobusy li.sitelink a {
