--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -258,7 +258,7 @@ div#logintrouble {float:right; width:auto; margin-right:10px; font-size:1.2em; c
 
 
 /* bookmark links */
-#blqx-bookmark a {color:#fff; ; text-decoration:underline}
+#blqx-bookmark a {color:#fff; text-decoration:underline}
 #blqx-bookmark a:hover {color:#ccc; text-decoration:none}
 #blqx-bookmark {position:relative; margin-bottom:3px; font-size:1.1em; color:#eee; background-color:#9e9e9e}
 #blqx-bookmark ul {float:left; position:relative; width:580px; margin-left:58px; z-index:2}
