--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -235,7 +235,7 @@ p.flag a {padding: 2px 0 2px 20px; color:#999; background:url(/dnaimages/dna_mes
 #blq-main #blq-content .dna-boards input.dna-button {width:auto; overflow:visible; padding:2px 10px; color:#fff; font-size:0.9em; font-weight:bold; background-color:#376dad; -moz-border-radius:3px; -webkit-border-radius:3px; border:none}
 #blq-main #blq-content .dna-boards input.cancel {margin:0 158px 0 8px; background-color:#71aef1}
 .dna-boards p.preview {margin:10px 0 0 24px; padding:0 10px}
-.dna-boards .submit, .dna-boards .cancel {float:right; margin:10px; padding:4px}
+.dna-boards .submit, .dna-boards .cancel {float:left; margin:0 0 10px 0; padding:4px}
 
 .dna-boards-membername {display:none}
 .dna-boards p.preview {font-style:italic; margin-left:1em}
