Preview post formatting...

--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/example_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/example_messageboard_v2.css
@@ -62,6 +62,10 @@
 	background-color: #5f9ea0;
 	background-image: none;
 }
+#blq-content table.forumthreads th {
+	background-color: #5f9ea0;
+	color: #fff;
+}
 /* add thread */
 #blq-main #blq-content .dna-boards input.dna-button {
 	background-color: #5f9ea0;
